--- a/templates/give_feedback.html
+++ b/templates/give_feedback.html
@@ -10,8 +10,10 @@
   <form action="" method=post class=feedback>
     <ul>
       <li id=step-1>
-        Flask makes me <span class=kind-selector><a href=# class=happy>happy</a></span> /
-        <span class=kind-selector><a href=# class=unhappy>unhappy</a></span> because …
+        Flask makes me <span class=selectors>
+          <span class=kind-selector><a href=# class=happy>happy</a></span> /
+          <span class=kind-selector><a href=# class=unhappy>unhappy</a></span>
+        </span> because …
       <li id=step-2>
         <p class=text><textarea name=feedback cols=50 rows=2></textarea>
       <li id=step-3>
