--- a/static/style.css
+++ b/static/style.css
@@ -62,6 +62,7 @@ p            { line-height: 1.4; }
 .message            { margin: 30px 0; }
 .message h2         { font-style: italic; font-size: 46px; text-align: center; }
 .message .meta      { color: #666; margin-top: 30px; text-align: right; }
+.message p.kind     { margin: 15px 0 30px 0; font-size: 20px; }
 
 /* faq */
 dl.qa dt        { margin: 15px 0 10px 0; font-style: italic; }
