--- a/templates/show_message.html
+++ b/templates/show_message.html
@@ -2,6 +2,8 @@
 {% block title %}Single Message{% endblock %}
 {% block body %}
   <div class=message>
+    <p class=kind>{% if feedback.is_happy %}A happy{%
+      else %}An unhappy{% endif %} user said:
     <h2>“{{ feedback.text }}”</h2>
     <p class=meta>
       written on {{ feedback.pub_date.strftime('%Y-%m-%d at %H:%M') }}
